# open-flight-school

./: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  check_user.py  create_tables.py  database.py  docker-compose.yml  extensions.py  init_db.py  load_test_data.py  models.py  pytest.ini  requirements.txt  test-data.json
backend/: Dockerfile  __init__.py  alembic.ini  api.py  config.py  crud.py  database.py  extensions.py  load_test_data.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  run_tests.sh  schemas.py  setup.py  test_api.py  test_app.py  test_models.py
backend/alembic/: env.py
backend/alembic/versions/: a09e135fb12f_initial_migration.py  add_timestamps.py  d3d9696d8106_update_schema.py  update_enums.py
backend/app/: api.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/open_flight_school.egg-info/: PKG-INFO  SOURCES.txt
backend/test_data/: load_test_data.py  test_aircraft.json  test_booking.json
backend/test_data/instructors/: test_instructor.json
backend/test_data/users/: test_user.json
backend/tests/: __init__.py  conftest.py  load_test_data.py  setup_test_db.sh  test_aircraft_api.py  test_api.py  test_app.py  test_booking_api.py  test_data.json  test_data_loader.py  test_instructor_api.py  test_models.py  test_user_api.py
docs/: conf.py  development.rst  index.rst
frontend/: Dockerfile  index.html  package-lock.json  package.json  server.js  vite.config.ts
scripts/: init-test-db.sh  load_test_data.py
templates/: account.html  base.html  booking.html  bookings.html  (+3 more)
(+20 files in other folders)
